<resources>
    <string name="app_name">CopOps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="GPS_is_settings">GPS is settings.</string>
    <string name="GPS_is_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings">Settings</string>
    <string name="no_internet">No internet Access, Check your internet connection.</string>
    <string name="default_notification_channel_id">copops.com.copopsApp.ANDROID</string>
    <string name="me">ME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">Please enter last name</string>
    <string name="first_name">Please enter first name</string>
    <string name="dob">Please enter date of birth</string>
    <string name="phone_number">Please enter phone number</string>
    <string name="phone_number_10">Please enter phone number minimum 10 digit</string>
    <string name="email">Please enter email</string>
    <string name="Male_female">Please select man or woman</string>
    <string name="profile_pic">Photo profile is requred ! </string>
    <string name="des">Please add description</string>
    <string name="other_des">Please add other description</string>
    <string name="password">Please enter password</string>
    <string name="old_password">Please enter old password</string>
    <string name="medical">Please Your Medical Condition</string>
    <string name="path">Please capture at least video or image</string>
    <string name="objecttext">Please enter the subject of the handrail reports</string>
    <string name="objecttextdes">Please enter the Description.  </string>
    <string name="incidentdes">Please enter the Description.  </string>
    <string name="validation_signature">Please Create Your Signature.</string>
    <string name="new_password">Please enter new password</string>
    <string name="con_password">Please enter confirm password</string>
    <string name="valid_email_errer">Not valid email</string>
    <string name="card1">Card 1 is required !</string>
    <string name="card2">Card 2 is required !</string>
    <string name="bussiness1">Bussiness 1 is required !</string>
    <string name="bussiness2">Bussiness 2 is required !</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
    <string name="internet_conection">Please check your internet connectivity !!! .</string>
    <string name="intervin">You have already one report to complete, please complete it first .</string>
    <string name="password_not_same">Password and Confirm password must be equal.</string>
    <string name="enter_location">Please Enter  City Name</string>
    <string name="checkmb">File size should be less than 10MB</string>
    <string name="cityName">Please Enter City Name</string>
    <string name="no_find">No Record found</string>
    <string name="accept">Accept</string>
    <string name="other_headerr">Other Description </string>
    <string name="eamil_taken">The email id has already been taken.</string>
    <string name="yes">YES</string>
    <string name="reject">Reject</string>
    <string name="no">NO</string>
    <string name="close">Close</string>
    <string name="information">Information</string>
    <string name="accept_message">Are You Sure You Want to Accept this Incident ? </string>
    <string name="exit_message">Are You Sure You Want to Exit ? </string>
    <string name="logout_message">Are You Sure You Want to Logout ? </string>
    <string name="loading_msg">Please Wait... </string>
    <string name="compress_msg">Please Wait Your video is Processing... </string>
    <string name="next">Next</string>
    <string name="type_police">Type Police</string>
    <string name="signaler_un_incident">Signaler un incident</string>
    <string name="medical_fireman">Medical / Fireman</string>
    <string name="type_city">Type City</string>
    <string name="whereareyougoing">  where are you going</string>
    <string name="citySearch">  City Search</string>
    <string name="address_hint">36, desnos road, La Rochelle,France</string>
    <string name="fill_dest">FILL IN THE DESTINATION</string>
    <string name="other">Other</string>
    <string name="body_accident">Body accident</string>
    <string name="airway_obstruction">Airway obstruction</string>
    <string name="lighting_out_of_order">Lighting out of order</string>
    <string name="hemorrhage_wound">hemorrhage,wound</string>
    <string name="dirty_place">Dirty Place (Street,Parc)</string>
    <string name="tags_onapublicbuilding">Tags on a public building</string>
    <string name="Fire_and_scorch">Fire and scorch</string>
    <string name="Heart_attack_and_malaise">Heart attack and malaise</string>
    <string name="Sexual_violence">Sexual violence</string>
    <string name="Burglary">Burglary</string>
    <string name="Theft">Theft</string>
    <string name="Attack_violence">Attack / violence</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="destination_selection">Please Select Your Destination for Navigation.</string>
    <string name="chat_sample">Chat Sample</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_chat_info">Chat info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_select_people_done">Done</string>
    <string name="dlg_loading">Loading</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="dlg_restoring_chat_session_logout">Restoring session and logout</string>
    <string name="create_chat">Creating chat…</string>
    <string name="dlg_login">Login…</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="error_recreate_session">Login Chat error</string>
    <string name="login_title">@string/chat_sample</string>
    <string name="splash_app_title">@string/chat_sample</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="login_select_user_for_login">Select User for Login to Chat</string>
    <string name="login_cant_obtain_users">Can\'t obtain users errors</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="dialogs_get_error">Get dialogs errors</string>
    <string name="select_users_list_hint">Select Users you want to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_get_dialog_error">Error getting dialog from server</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="chat_sticker">Sticker</string>
    <string name="groopMsg">No Group channel to show</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Type a message...</string>
    <string name="chat_me">Me</string>
    <string name="chat_friend">Friend</string>
    <string name="chat_join_error">Error join group chat</string>
    <string name="chat_send_message_error">Failed to send a message</string>
    <string name="chat_load_history_error">Load chat history errors</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment_error">Can\'t load chosen file</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Copops</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="write_someting_on_chat">Write Something to send.</string>
    <string name="chat_info">Chat info</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="group_chat_join_error">Could not join chat, errors:</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="sender_id">1074070354893</string>
    <string-array name="select_map_google_waze">
        <item>Google Maps</item>
        <item>Waze</item>
    </string-array>
    <string-array name="select_map_google">
        <item>Google Maps</item>
    </string-array>
    <string-array name="select_waze">
        <item>Waze</item>
    </string-array>
    <string name="whoareyou">Who are you?</string>
    <string name="home_app_msg">The public account is intended for use
of the application.
The Operator account is intended
in the force of order. </string>
    <string name="citizen">Citizen</string>
    <string name="citizen_top">Citizen</string>
    <string name="cops">COPS</string>
    <string name="validation_msg">The creation of the operator account
must be validated</string>
    <string name="Copops">COP-OPS</string>
    <string name="burglary">Burglary</string>
    <string name="security_msg">Security is the first freedom</string>
    <string name="header_msg">Lorem ipsum dolor sit
exciting and enjoyable way </string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_btn">Log In</string>
    <string name="forgot_pass">Forgot your password ?</string>
    <string name="not_registered">Not Registered ? </string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="dob_hint">dd / mm / yyyy</string>
    <string name="phone_no_hint">Phone Number</string>
    <string name="Email_hint">Email</string>
    <string name="con_pass_hint">Confirm Password</string>
    <string name="id_card">ID Card</string>
    <string name="business_id_card">Business Card</string>
    <string name="front_text_Recto">Recto</string>
    <string name="back_text_Verso">Verso</string>
    <string name="object">Object</string>
    <string name="Assignedintervention">Assigned intervention</string>
    <string name="reference">Reference</string>
    <string name="describetheincident">Describe the incident</string>
    <string name="datehourstate">Date / hour / State</string>
    <string name="datehint">dd/mm/yyyy</string>
    <string name="timehint">hh:mm:ss</string>
    <string name="address">Address</string>
    <string name="Attributionslist">Attributions list</string>
    <string name="Waiting">Waiting</string>
    <string name="Description">Description</string>
    <string name="Intervene">Intervene</string>
</resources>