<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@mipmap/img_blue_gradient_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/whoareyou"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_20sp" />


        </RelativeLayout>

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@mipmap/img_whoweare" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
             android:text="@string/home_app_msg"
            android:padding="5dp"
            android:textColor="@color/hawkes"
            android:textSize="@dimen/textsize_18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="2dp"
            android:text="@string/citizen_top"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/llcitizenhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_skyblue"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@mipmap/img_citizen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citizen"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:textSize="@dimen/textsize_22sp"
                android:textColor="@color/white"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/validation_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/llcopshome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_darkblue"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@mipmap/img_cops" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cops"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:textSize="@dimen/textsize_22sp"
                android:textColor="@color/white"/>


        </LinearLayout>


    </LinearLayout>

</ScrollView>